<resources>
    <string name="app_name">TimeGone</string>
    <string name="row_number">This is row number %d</string>
    <string name="time_use">使用时间</string>
    <string name="night_mode">夜间模式</string>
    <string name="lock_screen">锁屏</string>
    <string name="setLimit">日限</string>
    <string name="click_to_login">登录</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>
</resources>
