<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_marginTop="7dp"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icon_user"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/username"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/click_to_login"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="1sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|left"
                android:background="?android:attr/listDivider"
                />

            <TextView
                android:id="@+id/votes"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text=""
                android:textSize="12sp"
                android:maxLines="1"
                android:layout_marginBottom="2dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icon_settings"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/settings"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icon_help"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/help"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icon_feedback"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/feedback"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icon_about"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="left|center_vertical"
                android:text="@string/about"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>